tests/paczka2/big_fuzzy/73014155.err
Error in line 4: mxGit A78 71,1
Error in line 9: 3nBSYb S80 41,1
Error in line 16: TVRT A887 -2,3
Error in line 5: mxGit A887 347,4
Error in line 17: mxGit S80 94,6
Error in line 18: mxGit A78 62,6
Error in line 24: 3nBSYb A278 91,0
Error in line 11: TVRT A887 55,5
Error in line 22: 7NarsbvwGT S80 56,1
Error in line 34: mxGit S80 56,9
Error in line 45: mxGit A887 14,5
Error in line 32: Ku9mftGhst6 A278 44,6
Error in line 38: 7NarsbvwGT A78 193,5
Error in line 62: W87THt3 A278 277,15
Error in line 66: mxGit S80 19,4
Error in line 60: TVRT A887 52,7
Error in line 59: W87THt3 A278 69,2
Error in line 80: TVRT S80 59,2
Error in line 82: TVRT A887 13,0
Error in line 78: A887 A278 40,6
Error in line 91: 3nBSYb S80 42,1
Error in line 112: 7NarsbvwGT A78 98,1
Error in line 117: TVRT A278 45,5
Error in line 129: TVRT S80 55,2
Error in line 119: mxGit S80 95,5
Error in line 146: mxGit A78 59,4
Error in line 152: mxGit A887 16,9
Error in line 149: Ku9mftGhst6 A78 26,4
Error in line 157: 3nBSYb A887 57,6
Error in line 162: TVRT A278 379,8
Error in line 171: 3nBSYb S80 181,47
Error in line 170: TVRT A78 77,1
Error in line 169: 3nBSYb S80 77,3
Error in line 177: mxGit A887 274,7
Error in line 155: Ku9mftGhst6 S80 70,2
Error in line 191: 7NarsbvwGT A887 46,7
Error in line 180: 3nBSYb A887 97,1
Error in line 193: 7NarsbvwGT A78 38,4
Error in line 203: A887 A78 231,0
Error in line 206: A887 S80 45,2
Error in line 207: A887 A278 72,8
Error in line 220: Ku9mftGhst6 A887 55,2
Error in line 228: Ku9mftGhst6 A278 36,7
Error in line 243: Ku9mftGhst6 A887 50,8
